syntax = "proto3";
package game.bss.hearthstone;

// 位置
enum Position {
  Front = 0; // 前排
  Back = 1; // 后排
}

// 加入房间需要的额外数据
message JoinRoomExtraData {
  repeated string card_code = 1; // 牌库
}

// 游戏开始，下发参与的玩家信息
message GameStartEvent {
  repeated GamePlayer players = 1;
}

// 游戏开始下发的玩家信息
message GamePlayer {
  int32 index = 1;
  int64 uuid = 2;
}

// 游戏开始随机分组事件
message RandomGroupEvent {
  repeated uint64 group_players_1 = 1;
  repeated uint64 group_players_2 = 2;
}

// 准备回合开始
message StartingTurnStartEvent {}

// 准备回合结束
message StartingTurnEndEvent {}

// 准备回合行动
message StartingTurnAction {
  StartingTurnActionEnum action = 1;
  optional SelectPositionAction select_position_action = 2;
  optional LockPositionAction lock_position_action = 3;
  optional UnlockPositionAction unlock_position_action = 4;
  optional ReplaceStartingCardAction replace_starting_card_action = 5;
}

// 准备回合行动类型
enum StartingTurnActionEnum {
  Stop = 0; // 客户端计时结束，不再进行准备回合
  SelectPosition = 1;
  LockPosition = 2;
  UnlockPosition = 3;
  ReplaceStartingCard = 4;
}

// 玩家选择位置
message SelectPositionAction { optional Position position = 1; }

// 玩家锁定位置
message LockPositionAction {}

// 玩家解锁位置
message UnlockPositionAction {}

// 玩家选择位置事件
message PlayerSelectPositionEvent {
  uint64 player = 1;
  optional Position position = 2;
}

// 玩家锁定位置事件
message PlayerLockPositionEvent {
  uint64 player = 1;
}

// 玩家解锁位置事件
message PlayerUnlockPositionEvent {
  uint64 player = 1;
}

// 服务器决定位置
message ServerDecidePlayerPositionEvent {
  repeated int32 front_players = 1;
  repeated int32 back_players = 2;
}

// 卡牌
message Card { string card_code = 1; }

// 抽取起始卡牌
message DrawStartingCardEvent { repeated Card cards = 1; }

// 更换起始卡牌
message ReplaceStartingCardAction { repeated int32 card_index = 1; }

// 我的回合，进行行动
message MyTurnStartEvent {}

// 我的回合结束，无法行动
message MyTurnEndEvent {}

// 回合类型
enum TurnTypeEnum {
  PlayerTurn = 0;
  SwapTurn = 1;
}

// 新的回合
message NewTurnEvent {
  TurnTypeEnum turn_type = 1;
  optional PlayerTurnEvent player_turn = 2;
  optional SwapTurnEvent swap_turn = 3;
}

// 玩家回合
message PlayerTurnEvent {
  uint64 player_uuid = 1;
}

// 交换前后排回合
message SwapTurnEvent {}

// 玩家法力值变化
message PlayerManaChange {
  uint64 player_uuid = 1;
  int32 mana = 2;
}

// 目标
message Target {
  optional uint64 minion_id = 1;
  optional uint64 player = 2;
}

// 玩家回合行动类型
enum PlayerTurnActionEnum {
  PlayerEndTurn = 0;
  PlayerUseCard = 1;
  PlayerOperateMinion = 2;
}

// 玩家回合行动
message PlayerTurnAction {
  PlayerTurnActionEnum action_type = 1;
  // 回合结束
  optional PlayerEndTurnAction player_end_turn = 2;
  // 使用卡
  optional PlayerUseCardAction player_use_card = 3;
  // 操作行动
  optional PlayerOperateMinionAction player_operate_minion = 4;
}

// 回合结束
message PlayerEndTurnAction {}

// 玩家使用卡
message PlayerUseCardAction {
  int32 card_index = 1;
  optional Target target = 2;
  optional int32 summon_position = 3;
}

// 玩家操作随从
message PlayerOperateMinionAction {
  uint64 minion_id = 1;
  Target target = 2;
}

// 玩家使用卡事件
message PlayerUseCardEvent {
  uint64 player_uuid = 1;
  int32 card_index = 2;
  Card card = 3;
  int32 cost_mana = 4;
}

// 玩家使用卡事件完毕
message PlayerUseCardEndEvent {
}

// 随从入场事件
message MinionEnterEvent {
  uint64 minion_id = 1;
  Card card = 2;
  int32 group = 3;
  int32 index = 4;
  int32 atk = 5;
  int64 hp = 6;
}

// 随从离场事件
message MinionRemoveEvent { uint64 minion_id = 1; }

// 伤害
message DamageEvent {
  Target target = 1;
  int64 damage = 2;
}

// 抽牌结果
enum DrawCardResult {
  Ok = 0;
  Fire = 1;
  Tired = 2;
}

// 抽牌事件
message DrawCardEvent {
  uint64 player_uuid = 1;
  optional Card card = 2;
  DrawCardResult draw_card_result = 3;
  optional uint32 tired = 4;
}

// 随从效果类型
enum MinionEffect {
  Other = 0;
  Battlecry = 1;
  Deathrattle = 2;
}

// 随从效果事件
message MinionEffectEvent {
  uint64 minion_id = 1;
  MinionEffect minion_effect = 2;
}

// 交换前后场
message SwapFrontBackEvent {
  uint64 player_uuid = 1;
  Position new_position = 2;
}

// 随从攻击事件
message MinionAttackEvent {
  uint64 minion_id = 1;
  Target target = 2;
}

// buff
message Buff {
  int32 atk_boost = 1;
  int32 hp_boost = 2;
}

// buff事件
message BuffEvent {
  Target target = 1;
  Buff buff = 2;
}

// 英雄死亡
message HeroDeathEvent { uint64 player = 1; }

// 游戏结束
message GameEndEvent {
  bool win = 1;
  bool lost = 2;
}

// 游戏状态同步
message SyncGameStatus {
  repeated PlayerStatus player_status = 1;
  repeated MinionStatus minion_status = 2;
  optional uint64 turn_uuid = 3;
}

// 玩家状态
message PlayerStatus {
  uint64 uuid = 1;
  int64 room_index = 2;
  int32 card_count = 3;
  repeated Card cards = 4;
  int64 hp = 5;
  int32 mana = 6;
  int32 deck_count = 7;
  Position position = 8;
  int32 camp = 9;
}

// 随从状态
message MinionStatus {
  uint64 uuid = 1;
  Card card = 2;
  int32 atk = 3;
  int64 hp = 4;
  repeated Buff buff_list = 5;
  int32 camp = 6;
}
